# eval_dataset

./: .gitignore  README.md  pyproject.toml
artifacts/clustering/desc_full/: desc_full_hdbscan.csv  desc_full_hdbscan.html  desc_full_hdbscan.summary.json
artifacts/clustering/desc_full_lil/: desc_full_lil_hdbscan.csv  desc_full_lil_hdbscan.html  desc_full_lil_hdbscan.summary.json
artifacts/clustering/vl_full/: vl_full_hdbscan.csv  vl_full_hdbscan.html  vl_full_hdbscan.summary.json
artifacts/embeddings/desc_full/: desc_full_doc_desc_vectors.parquet  desc_full_doc_descriptions.jsonl  desc_full_doc_descriptions.parquet  desc_full_query_desc_vectors.jsonl  desc_full_query_desc_vectors.parquet  desc_full_run_manifest.json
artifacts/embeddings/desc_full_lil/: desc_full_lil_doc_desc_vectors.jsonl  desc_full_lil_doc_desc_vectors.parquet  desc_full_lil_query_desc_vectors.jsonl  desc_full_lil_query_desc_vectors.parquet  desc_full_lil_query_descriptions.jsonl  (+2 more)
artifacts/metadata/: manifest.jsonl  phase1_summary.json  qrels_template.jsonl  queries.jsonl
data/food_recipe-txt/: PMD-recipes_text-0001.txt  PMD-recipes_text-0002.txt  PMD-recipes_text-0003.txt  PMD-recipes_text-0004.txt  PMD-recipes_text-0005.txt  PMD-recipes_text-0006.txt  PMD-recipes_text-0007.txt  PMD-recipes_text-0008.txt  PMD-recipes_text-0009.txt  PMD-recipes_text-0010.txt
prep_scripts/: extract_pages.py
src/: analyze_vector_clusters.py  dataset_metadata.py  image_utils.py  interactive_results_app.py  pipeline_common.py  pipeline_desc_embed.py  pipeline_runner.py  pipeline_vl_embed.py  schemas.py
(+5 files in other folders)
